# std-benchmark

./: .travis-cmake-install.sh  .travis.yml  CMakeLists.txt  README.md  TODO.txt  config.bat
c/: CMakeLists.txt  algorithm.bench.cpp  algorithm.search.bench.cpp  algorithm.sort.bench.cpp  math.bench.cpp  string.bench.cpp
c.vs.cxx/: CMakeLists.txt  README  cxxstring.vs.cstring.bench.cpp
compiler.vs.programmer/: CMakeLists.txt  memory.bench.cpp
cxx/: .CMakeLists.txt.swp  CMakeLists.txt  README  accessors.bench.cpp  algorithm.bench.cpp  algorithm.search.bench.cpp  algorithm.sort.bench.cpp  farequote.csv  getline.cpp  max.cpp  mutators.bench.cpp  size_metric.bench.cpp  sizeof.cpp  stable_sort.cpp  str.cpp  str.s  string.bench.cpp  string.libcxx.bench.cpp  stringstream.bench.cpp  umap.cpp  umap2.cpp
docs/: Bibliography.bib  Makefile  Performance analysis of libcxx.pptx  abstract-cppcon.tex  abstract.tex  frequency-scaling.md  graphviz.sty  std-benchmark.tex  string-find-vs-cstring-strstr.ods
docs/slides/: Makefile  clang.result  dac-todo  gcc-1.result  gcc.result  healthy-lto  msvc.l1l2.result  slide-DAC-2017.pptx  slide-acm-2021-DAC-2017.pptx  slide-cppnow.pptx
include/: rng_utils.h  test_configs.h  test_utils.h
test/: CMakeLists.txt  test_random.cpp
